--- a/test/homework/CMakeLists.txt
+++ b/test/homework/CMakeLists.txt
@@ -6,3 +6,5 @@ ADD_SUBDIRECTORY(05_functions)
 ADD_SUBDIRECTORY(06_tic_tac_toe)
 ADD_SUBDIRECTORY(07_arrays)
 ADD_SUBDIRECTORY(08_memory)
+ADD_SUBDIRECTORY(09_recursion)
+ADD_SUBDIRECTORY(10_algorithm)
