--- a/src/homework/04_repetition/CMakeLists.txt
+++ b/src/homework/04_repetition/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(hw_04_library "dna.cpp" "dna.h")
-add_executable(hw_04_exe "main.cpp" "dna.cpp")
+add_library(hw_04_library "repetition.cpp" "repetition.h")
+add_executable(hw_04_exe "main.cpp" "repetition.cpp")
 
